--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       background-color: #00B0F0;
       padding: 20px;
       text-align: center;
-      flex: 1 1 33.33%;
-      max-width: 33.33%;
+      flex: 1 1 100%;
       color: #000080;
       border-radius: 0;
     }
@@ -40,15 +39,16 @@
       padding: 20px;
       border-radius: 0;
       width: 100%;
+      flex-wrap: wrap;
     }
     .right-left {
-      flex: 1 1 50%;
+      flex: 1 1 100%;
       display: flex;
       flex-direction: column;
       gap: 20px;
     }
     .right-right {
-      flex: 1 1 33.33%;
+      flex: 1 1 100%;
       background-color: #e96c23;
       font-size: 24px;
       line-height: 1.5;
@@ -81,35 +81,52 @@
       padding: 5px;
     }
 
-    @media (min-width: 768px) {
+    /* 橫向螢幕 (寬度大於高度) */
+    @media (orientation: landscape) {
       .container {
         flex-direction: row;
       }
+
       .left {
-        flex: 1 1 33.33%;
-        max-width: 33.33%;
+        flex: 1 1 30%; /* 左側區塊占據30%寬度 */
+        max-width: 30%;  /* 限制圖片區塊最大寬度 */
       }
+
       .right {
-        flex: 2 1 66.66%;
+        flex: 1 1 65%; /* 右側區塊占據65%寬度 */
         padding: 20px;
       }
+
       .left img {
         max-width: 100%;
         height: auto;
       }
+
+      .right-left, .right-right {
+        width: 100%;
+      }
+
+      .right p, .right h3 {
+        word-wrap: break-word;
+        line-height: 1.6;
+      }
     }
 
-    @media (max-width: 768px) {
+    /* 直向螢幕 (高度大於寬度) */
+    @media (orientation: portrait) {
       .container {
         flex-direction: column;
       }
+
       .left {
         flex: 1 1 100%;
         max-width: 100%;
       }
+
       .right-left, .right-right {
         flex: 1 1 100%;
       }
+
       .left img {
         max-height: 300px;
       }
