--- a/index.html
+++ b/index.html
@@ -128,8 +128,12 @@
       }
 
       .left img {
-        max-height: 300px;
-      }
+        width: 100%; 
+        height: auto; 
+        max-height: 300px; 
+        object-fit: cover; 
+    }
+
     }
   </style>
 </head>
