--- a/index.html
+++ b/index.html
@@ -130,10 +130,8 @@
       .left img {
         width: 100%; 
         height: auto; 
-        max-height: 300px; 
-        object-fit: cover; 
+        max-height: 100%; 
     }
-
     }
   </style>
 </head>
