--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       flex-wrap: wrap;
     }
     .left {
-      background-color: #00B0F0;
+      background-color: #eb0f0f;
       padding: 20px;
       text-align: center;
       flex: 1 1 100%;
@@ -33,13 +33,12 @@
       margin-top: 10px;
     }
     .right {
-      display: flex;
-      gap: 20px;
-      background-color: #e96c23;
+      display: flex; /* 使用彈性佈局 */
+      gap: 20px; /* 區塊之間的間距 */
+      background-color: #0ee2a3; /* 淺橘色背景 */
       padding: 20px;
-      border-radius: 0;
-      width: 100%;
-      flex-wrap: wrap;
+      border-radius: 0; /* 去掉圓角 */
+      width: 100%; /* 確保右側區塊占滿容器寬度 */
     }
     .right-left {
       flex: 1 1 100%;
@@ -48,10 +47,11 @@
       gap: 20px;
     }
     .right-right {
-      flex: 1 1 100%;
-      background-color: #e96c23;
-      font-size: 24px;
-      line-height: 1.5;
+      flex: 0 0 33.33%; /* 右半邊占據 1/3 寬度 */
+      background-color: #0ee2a3; /* 可選的背景色 */
+      border-radius: 0; /* 去掉圓角 */
+      font-size: 24px; /* 統一文字大小 */
+      line-height: 1.5; /* 增加行距，讓文字更易讀 */
     }
     .section {
       flex: 1 1 calc(50% - 20px);
@@ -149,31 +149,59 @@
           <p>在生活的旅途中，一些偶爾而有力的勵志語句能夠成為我前行的動力，這些話句不僅僅是文字，更是一種能量，能夠激發我們內心的潛能，增強信心，帶來積極的心理暗示。</p>
         </div>
         <div class="section">
-          <div class="wavy-strikethrough">我最喜歡的清新文字</div>
+          <div class="wavy-strikethrough">最喜歡的語錄</div>
           <ol>
-            <li>在人生最低潮時，要保持平衡，就必須一直向前。</li>
-            <li>你有熱情有毅力，尤其要有信心。</li>
-            <li>有夢想成功的基礎。沒有行動，一切都是空談。</li>
+            <li>即使黑暗再深，光明也會到來。</li>
+            <li>勇氣並不是不害怕，而是害怕也能繼續前行。</li>
+            <li>人生的成功不是終點，而是每一步的成長。</li>
           </ol>
         </div>
         <div class="section">
           <h3 class="highlight-yellow">我最喜歡的一首歌－勇氣</h3>
         </div>
         <div class="section">
-          <p>終於做了這個決定<br /> 別人怎麼說 我不理<br /> 只要你也一樣的肯定<br /> 我願意天涯海角都隨你去<br /></p>
+            <p>前路漫漫 總有繞不過的彎<br />
+                人生太短 悲歡自渡皆是傷<br />
+                這熙攘的人潮 誰不迷惘<br />
+                誰不是 在崩潰的邊緣 苦求著希望<br />
+                想要用魔法 解開生活的惆悵<br />
+                誰不是奔跑在黑暗中 追尋微弱的光<br />
+                也曾輕言過失敗 也曾被冷眼相待<br />
+                在最平庸的日子裡 頻繁受傷害<br />
+                人生吶 能不能放過我這一次<br />
+                下輩子我只想做個 不會長大的孩子<br />
+                有人取暖有人依靠 不會有太多心事<br />
+                用最天真的橡皮 就能擦去生活的爭執<br />
+                人生吶 能不能放過我這一次<br />
+                有時候明明很累 卻不知道為什麼要堅持<br />
+                殘酷的現實 在擊碎內心堅強的城池<br />
+                擦乾眼淚對著雞零狗碎的日子<br />
+                一笑了之</br>
+            </p>
         </div>
       </div>
       <div class="right-right">
-        我的心一直溫習說服自己<br />
-        最怕你忽然說要放棄<br />
-        愛真的需要勇氣來面對流言蜚語<br />
-        只要你一個眼神肯定 我的愛就有意義<br />
-        我們都需要勇氣去相信會在一起<br />
-        人潮擁擠 我能感覺你放在我手心裡 你的真心<br />
-        終於做了這個決定<br />
-        別人怎麼說 我不理<br />
-        只要你也一樣的肯定<br />
-        我願意天涯海角都隨你去<br />
+        想要用魔法 解開生活的惆悵   <br />
+        誰不是奔跑在黑暗中 追尋微弱的光 <br />
+        也曾輕言過失敗 也曾被冷眼相待 <br />
+        在最平庸的日子裡 頻繁受傷害 <br />
+        人生吶 能不能放過我這一次 <br />
+        下輩子我只想做個 不會長大的孩子 <br />
+        有人取暖有人依靠 不會有太多心事 <br />
+        用最天真的橡皮 就能擦去生活的爭執 <br />
+        人生吶 能不能放過我這一次   <br />
+        有時候明明很累 卻不知道為什麼要堅持 <br />
+        殘酷的現實 在擊碎內心堅強的城池 <br />
+        擦乾眼淚對著雞零狗碎的日子 <br />
+        人生吶 能不能放過我這一次 <br />
+        下輩子我只想做個 不會長大的孩子 <br />
+        有人取暖有人依靠 不會有太多心事 <br />
+        用最天真的橡皮 就能擦去生活的爭執 <br />
+        人生吶 能不能放過我這一次 <br />
+        有時候明明很累 卻不知道為什麼要堅持 <br />
+        殘酷的現實 在擊碎內心堅強的城池 <br />
+        擦乾眼淚對著雞零狗碎的日子 <br />
+        一笑了之 <br />
       </div>
     </div>
   </div>
