--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
       flex: 0 0 33.33%; /* 右半邊占據 1/3 寬度 */
       background-color: #0ee2a3; /* 可選的背景色 */
       border-radius: 0; /* 去掉圓角 */
-      font-size: 30px; /* 統一文字大小 */
+      font-size: 24px; /* 統一文字大小 */
       line-height: 1.5; /* 增加行距，讓文字更易讀 */
     }
     .section {
       flex: 1 1 calc(50% - 20px);
       box-sizing: border-box;
       padding: 10px;
+      font-size: 18px;
       border-radius: 0;
     }
     .section h3 {
